[tool.poetry]
name = "drug-mentions"
version = "0.1.0"
description = "Data pipeline for drug mentions"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "drug_mentions", from = "src" }
]
[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.0"
pandas = "^2.0.0"
pydantic = "^1.10.0"
streamlit = "^1.25.0"
duckdb = "^1.2.0"

[tool.poetry.scripts]
drug-mentions = "drug_mentions.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
